アップデータが正しく動作しない不具合を修正

--- a/public/history.txt
+++ b/public/history.txt
@@ -3,3 +3,7 @@ windows Native Peing Connector(NPC) 更新履歴
 2021/03/24 Version 1.0.1
 1. プロキシサーバーの設定が正しく反映されなかった問題を修正しました。
 2. 特定の環境で、プログラムが起動できない問題を修正しました。
+3. アップデータが正しく動作しない問題を修正しました。
+
+2021/03/14 Version 1.0.0
+初回リリース
