--- a/public/history.txt
+++ b/public/history.txt
@@ -1,5 +1,9 @@
 windows Native Peing Connector(NPC) 更新履歴
 
+2021/03/31 Version 1.0.2
+1. 登録済みユーザ一覧からフィルタを設定した場合に、メニューバーの状態と齟齬が発生する場合があった不具合を修正しました。
+2. ユーザ追加のダイアログにおいて、ユーザ名を大文字で入力した場合であっても正しく登録できるようになりました。
+
 2021/03/24 Version 1.0.1
 1. プロキシサーバーの設定が正しく反映されなかった問題を修正しました。
 2. 特定の環境で、プログラムが起動できない問題を修正しました。
