--- a/locale/en-us/LC_MESSAGES/messages.po
+++ b/locale/en-us/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NPC\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-01 21:36+0900\n"
-"PO-Revision-Date: 2021-04-01 21:39+0900\n"
+"POT-Creation-Date: 2021-04-26 11:43+0900\n"
+"PO-Revision-Date: 2021-04-26 11:55+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en_US\n"
@@ -99,53 +99,75 @@ msgstr "Open a user's page in a &browser"
 msgid "登録済みユーザリスト(&L)"
 msgstr "Registered Users &List"
 
-#: menuItemsDic.py:24
+#: menuItemsDic.py:24 views\main.py:274
+msgid "Twitterのフォローリストから一括登録"
+msgstr "Add Users from Twitter's Following List"
+
+#: menuItemsDic.py:25
 msgid "終了(&X)"
 msgstr "E&xit"
 
-#: menuItemsDic.py:26
+#: menuItemsDic.py:27
 msgid "運営からの質問を非表示(&M)"
 msgstr "Hide questions from &Management"
 
-#: menuItemsDic.py:27
+#: menuItemsDic.py:28
 msgid "バトン質問を非表示(&B)"
 msgstr "Hide &Baton Questions"
 
-#: menuItemsDic.py:28
+#: menuItemsDic.py:29
 msgid "選択中ユーザのみ表示(&U)"
 msgstr "Show only selected &user"
 
-#: menuItemsDic.py:30
-msgid "届いている質問に回答"
-msgstr ""
-
 #: menuItemsDic.py:31
+msgid "届いている質問に回答"
+msgstr "Make a Reply to Your Questions"
+
+#: menuItemsDic.py:32
 msgid "アーカイブ済みの質問を表示"
-msgstr ""
+msgstr "Show Archived Questions"
 
 #: menuItemsDic.py:33
-msgid "アカウントのフォロイーから一括登録"
-msgstr ""
+msgid "送信した質問を表示"
+msgstr "Show Sent Questions"
 
-#: menuItemsDic.py:36
+#: menuItemsDic.py:37
 msgid "設定(&S)"
 msgstr "&Settings"
 
-#: menuItemsDic.py:37
+#: menuItemsDic.py:38
 msgid "ショートカットキーの設定(&K)"
 msgstr "Set shortcut &keys"
 
-#: menuItemsDic.py:38
+#: menuItemsDic.py:39
 msgid "リスト表示設定(&L)"
 msgstr "&List display settings"
 
-#: menuItemsDic.py:40
+#: menuItemsDic.py:41
 msgid "最新バージョンを確認(&U)"
 msgstr "Check for &Updates"
 
-#: menuItemsDic.py:41
+#: menuItemsDic.py:42
 msgid "バージョン情報(&V)"
 msgstr "&Version Info"
+
+#: twitterService.py:34
+msgid ""
+"認証に成功しました。このウィンドウを閉じて、アプリケーションに戻ってくださ"
+"い。"
+msgstr ""
+"Authorization successful. Close this window and go back to the application."
+
+#: twitterService.py:35
+msgid "認証に失敗しました。もう一度お試しください。"
+msgstr "Authorization failed.  Please try again."
+
+#: twitterService.py:36
+msgid ""
+"しばらくしても画面が切り替わらない場合は、別のブラウザでお試しください。"
+msgstr ""
+"If the screen does not change after a while, open this page in another "
+"browser."
 
 #: update.py:50 update.py:59 update.py:73 update.py:79 update.py:90
 #: update.py:98 update.py:103 update.py:108 update.py:160
@@ -212,57 +234,56 @@ msgstr "Baton"
 
 #: views\answerDialog.py:24
 msgid "質問に回答"
-msgstr ""
+msgstr "Answer questions"
 
-#: views\answerDialog.py:35
+#: views\answerDialog.py:35 views\sentQuestionDialog.py:35
 msgid "未回答の質問"
-msgstr ""
+msgstr "Unanswered questions"
 
-#: views\answerDialog.py:36
+#: views\answerDialog.py:36 views\sentQuestionDialog.py:38
 msgid "質問"
-msgstr ""
+msgstr "question"
 
-#: views\answerDialog.py:37
-#, fuzzy
+#: views\answerDialog.py:37 views\sentQuestionDialog.py:40
 msgid "日時"
-msgstr "Answered date and time"
+msgstr "Date"
 
 #: views\answerDialog.py:38 views\detailDialog.py:39
+#: views\sentQuestionDialog.py:41
 msgid "種別"
 msgstr "Type"
 
 #: views\answerDialog.py:44
 msgid "回答する(&A)"
-msgstr ""
+msgstr "&Answer"
 
 #: views\answerDialog.py:46
-#, fuzzy
-msgid "アーカイブ(&D)"
-msgstr "&Delete user"
+msgid "アーカイブ"
+msgstr "Archive"
 
 #: views\answerDialog.py:48
 msgid "元に戻す"
-msgstr ""
+msgstr "Undo"
 
 #: views\answerDialog.py:50 views\detailDialog.py:42
-#: views\userDetailDialog.py:44 views\userListDialog.py:54
+#: views\sentQuestionDialog.py:49 views\userDetailDialog.py:44
+#: views\userListDialog.py:54
 msgid "閉じる(&C)"
 msgstr "&Close"
 
 #: views\answerDialog.py:82
 msgid "回答の入力"
-msgstr ""
+msgstr "Enter answers"
 
 #: views\answerDialog.py:88
 msgid "回答完了"
-msgstr ""
+msgstr "Answer complete"
 
 #: views\answerDialog.py:88
 msgid "回答が送信されました。"
-msgstr ""
+msgstr "An answer has been sent."
 
 #: views\answerDialog.py:91
-#, fuzzy
 msgid ""
 "指定された質問が存在しないか、通信に失敗しました。以下の対処をお試しくださ"
 "い。\n"
@@ -273,16 +294,18 @@ msgid ""
 "・しばらくたってから再度お試しください。\n"
 "・問題が解決しない場合、開発者までお問い合わせください。"
 msgstr ""
-"The specified user does not exist or connecion failed. Try the following:\n"
+"The specified question does not exist or connection failed. Try the "
+"following:\n"
 "\n"
-"Please check again if the input content is correct.\n"
-"Check from your browser to see if you can access peing.net.\n"
-"Please try again after a while.\n"
-"If the problem is not resolved, please contact to the developer."
+"The input content may be too long.\n"
+"Reload the questions list.\n"
+"Check if you can connect to peing.net on your browser.\n"
+"Try again after a while.\n"
+"If this issue could not be resolved, contact to the developers."
 
 #: views\answerDialog.py:95
 msgid "質問をアーカイブ"
-msgstr ""
+msgstr "Archive questions"
 
 #: views\answerDialog.py:95
 #, python-format
@@ -291,10 +314,13 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Do you want to archive the following question?\n"
+"\n"
+"%s"
 
 #: views\answerDialog.py:103
 msgid "質問を元に戻す"
-msgstr ""
+msgstr "Undo a question"
 
 #: views\answerDialog.py:103
 #, python-format
@@ -303,6 +329,9 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Do you want to undo the following questions?\n"
+"\n"
+"%s"
 
 #: views\base.py:67
 msgid "現在メニューは操作できません"
@@ -323,6 +352,68 @@ msgstr ""
 #: views\KeyValueSettingDialogBase.py:330 views\updateDialog.py:66
 msgid "エラー"
 msgstr "error"
+
+#: views\candidateUserListDialog.py:20
+msgid "登録候補ユーザの確認"
+msgstr "Review potential registered users"
+
+#: views\candidateUserListDialog.py:31
+msgid "登録候補ユーザ"
+msgstr "Potential registered users"
+
+#: views\candidateUserListDialog.py:32 views\userDetailDialog.py:28
+#: views\userListDialog.py:35
+msgid "表示名"
+msgstr "Display name"
+
+#: views\candidateUserListDialog.py:33 views\userDetailDialog.py:30
+#: views\userListDialog.py:36
+msgid "アカウント"
+msgstr "Account"
+
+#: views\candidateUserListDialog.py:42 views\userListDialog.py:45
+msgid "詳細"
+msgstr "Details"
+
+#: views\candidateUserListDialog.py:43 views\userListDialog.py:49
+msgid "削除"
+msgstr "delete"
+
+#: views\candidateUserListDialog.py:46
+msgid "登録(&R)"
+msgstr "&Register"
+
+#: views\candidateUserListDialog.py:47 views\KeyValueSettingDialogBase.py:81
+#: views\KeyValueSettingDialogBase.py:259 views\listConfigurationDialog.py:55
+#: views\settingsDialog.py:98 views\SimpleImputDialog.py:41
+#: views\updateDialog.py:45
+msgid "キャンセル"
+msgstr "cancel"
+
+#: views\candidateUserListDialog.py:58 views\main.py:222
+#: views\userListDialog.py:70
+msgid "ユーザの削除"
+msgstr "Delete a user"
+
+#: views\candidateUserListDialog.py:58
+#, python-format
+msgid ""
+"以下のユーザを登録候補の一覧から削除しますか？\n"
+"\n"
+"%s"
+msgstr ""
+"Do you want to delete the following user?\n"
+"\n"
+"%s"
+
+#: views\candidateUserListDialog.py:70
+msgid "一括登録の確認"
+msgstr "Confirm bulk registration"
+
+#: views\candidateUserListDialog.py:70
+#, python-format
+msgid "表示している%d件のアカウントを登録しますか？"
+msgstr "Do you want to register %d accounts you're seeing?"
 
 #: views\detailDialog.py:19 views\userDetailDialog.py:19
 msgid "詳細情報"
@@ -357,7 +448,7 @@ msgstr "shortcut"
 msgid "識別子"
 msgstr "identifier"
 
-#: views\globalKeyConfig.py:31 views\main.py:325
+#: views\globalKeyConfig.py:31 views\main.py:426
 msgid "ショートカットキーの設定"
 msgstr "Shortcut Key Configuration"
 
@@ -366,7 +457,7 @@ msgstr "Shortcut Key Configuration"
 #: views\globalKeyConfig.py:120 views\globalKeyConfig.py:128
 #: views\globalKeyConfig.py:138 views\globalKeyConfig.py:143
 #: views\keyConfig.py:57 views\KeyValueSettingDialogBase.py:315
-#: views\main.py:478 views\main.py:491
+#: views\main.py:581 views\main.py:594
 msgid "なし"
 msgstr "None"
 
@@ -460,15 +551,9 @@ msgid "削除(&D)"
 msgstr "&Delete"
 
 #: views\KeyValueSettingDialogBase.py:80 views\KeyValueSettingDialogBase.py:258
-#: views\listConfigurationDialog.py:54 views\SimpleImputDialog.py:35
+#: views\listConfigurationDialog.py:54 views\SimpleImputDialog.py:40
 msgid "ＯＫ"
 msgstr "OK"
-
-#: views\KeyValueSettingDialogBase.py:81 views\KeyValueSettingDialogBase.py:259
-#: views\listConfigurationDialog.py:55 views\settingsDialog.py:98
-#: views\SimpleImputDialog.py:36 views\updateDialog.py:45
-msgid "キャンセル"
-msgstr "cancel"
 
 #: views\KeyValueSettingDialogBase.py:122
 #: views\KeyValueSettingDialogBase.py:152
@@ -536,44 +621,43 @@ msgstr "Move &Right"
 msgid "全ての列を非表示にすることはできません。"
 msgstr "Not all columns can be hidden."
 
-#: views\main.py:162
+#: views\main.py:165
 msgid "ファイル(&F)"
 msgstr "&File"
 
-#: views\main.py:163
+#: views\main.py:166
 msgid "フィルタ(&I)"
 msgstr "F&ilter"
 
-#: views\main.py:164
-#, fuzzy
+#: views\main.py:167
 msgid "アカウント(&A)"
-msgstr "Account"
+msgstr "&Account"
 
-#: views\main.py:165
+#: views\main.py:168
 msgid "オプション(&O)"
 msgstr "&Options"
 
-#: views\main.py:166
+#: views\main.py:169
 msgid "ヘルプ(&H)"
 msgstr "&Help"
 
-#: views\main.py:180
+#: views\main.py:183
 msgid "ユーザの追加"
 msgstr "Add a user"
 
-#: views\main.py:180
+#: views\main.py:183
 msgid "peingページURLまたはTwitterユーザ名"
 msgstr "peing page URL or twitter user name"
 
-#: views\main.py:190
+#: views\main.py:193
 msgid "指定されたユーザは既に登録済みです。"
 msgstr "The specified user is already registered."
 
-#: views\main.py:197
+#: views\main.py:200
 msgid "ユーザ追加"
 msgstr "Add user"
 
-#: views\main.py:197
+#: views\main.py:200
 #, python-format
 msgid ""
 "以下のユーザを追加しますか？\n"
@@ -586,11 +670,11 @@ msgstr ""
 "ID:%(id)d\n"
 "%(name)s (%(account)s)"
 
-#: views\main.py:201
+#: views\main.py:204 views\main.py:353
 msgid "登録完了"
 msgstr "Registeration Completed"
 
-#: views\main.py:201
+#: views\main.py:204
 msgid ""
 "ユーザの登録に成功しました。今回登録したユーザの回答を表示するには、ビューを"
 "再読み込みしてください。"
@@ -598,15 +682,11 @@ msgstr ""
 "The user was successfully registered. To view the answers of the users who "
 "registered this time, please reload the view."
 
-#: views\main.py:204
+#: views\main.py:207
 msgid "ユーザの登録に失敗しました。"
 msgstr "User registration failed."
 
-#: views\main.py:219 views\userListDialog.py:70
-msgid "ユーザの削除"
-msgstr "Delete a user"
-
-#: views\main.py:219 views\userListDialog.py:70
+#: views\main.py:222 views\userListDialog.py:70
 #, python-format
 msgid ""
 "以下のユーザの登録と、過去の回答履歴を削除しますか？\n"
@@ -618,23 +698,129 @@ msgstr ""
 "\n"
 "%s"
 
-#: views\main.py:231
+#: views\main.py:235
 msgid ""
 "このユーザは既に退会したか、peingIDを変更しているため開くことができません。"
 msgstr ""
 "This user cannot be opened because he has already unsubscribed or changed "
 "his peingID."
 
-#: views\main.py:249
+#: views\main.py:253
 msgid "出力先ファイルの指定"
 msgstr "Specify destination file"
 
-#: views\main.py:249
+#: views\main.py:253
 msgid "CSVファイル(*.csv) | *.csv; | すべてのファイル(*.*) | *.*"
 msgstr "CSV file (*.csv) | *.csv; | All files (*.*) | *.*"
 
-#: views\main.py:306 views\main.py:315
-#, fuzzy
+#: views\main.py:274
+msgid "Twitterアカウントの認証のため、ブラウザの操作を待っています。"
+msgstr "Waiting for browser..."
+
+#: views\main.py:280
+msgid ""
+"Twitterの認証に失敗しました。ブラウザ上で認証を拒否した、時間がかかりすぎた、"
+"またはインターネット接続に問題がある可能性があります。"
+msgstr ""
+"Twitter authentication failed. Your browser may have refused to "
+"authenticate, took too long, or you may have a problem with your Internet "
+"connection."
+
+#: views\main.py:286
+msgid "対象ユーザの指定"
+msgstr "specify users"
+
+#: views\main.py:286
+msgid ""
+"フォロー中のユーザを取得するアカウントの@からはじまるアカウント名を入力してく"
+"ださい。\n"
+"後悔アカウント、認証に用いたアカウント、\n"
+"または認証に用いたアカウントがフォローしている非公開アカウントを指定できま"
+"す。"
+msgstr ""
+"Enter the account name that starts with @, the account you want to get "
+"following users for.\n"
+"Regret accounts, accounts used for authentication,\n"
+"Or you can specify a private account that the account you used to "
+"authenticate follows."
+
+#: views\main.py:297
+msgid "フォローリストを取得しています。"
+msgstr "Retrieving following users data"
+
+#: views\main.py:301
+msgid ""
+"Twitterからフォローリストを取得できませんでした。指定したユーザが存在しない"
+"か、フォローしていない非公開アカウントである可能性があります。"
+msgstr ""
+"Failed to get a follow list from Twitter. The specified user may not exist "
+"or may be a private account that you do not follow."
+
+#: views\main.py:303
+msgid ""
+"Twitterからフォローリストを取得できませんでした。しばらくたってから再度お試し"
+"ください。状況が改善しない場合には、開発者までお問い合わせください。"
+msgstr ""
+"Failed to get a follow list from Twitter. Please try again after a while. If "
+"the situation does not improve, contact the developer."
+
+#: views\main.py:308
+msgid ""
+"Twitterからフォローリストを取得できませんでした。まだ誰もフォローしていないア"
+"カウントであるか、通信回数の上限に達しています。後者の場合には、15分以上待っ"
+"てから再度お試しください。"
+msgstr ""
+"Failed to get a follow list from Twitter. It's an account that no one has "
+"followed yet, or you're at the maximum number of communications. In the "
+"latter case, wait at least 15 minutes and try again."
+
+#: views\main.py:311
+msgid "登録済みユーザのリストを取得しています。"
+msgstr "Retrieving registered users data"
+
+#: views\main.py:323
+msgid "Peingへの登録状況を調べています。"
+msgstr "Checking the status of registration with Peing."
+
+#: views\main.py:331
+msgid "通信エラー"
+msgstr "Communication error"
+
+#: views\main.py:331
+msgid ""
+"Peingとの通信でエラーが発生しました。インターネット接続を確認し、しばらくたっ"
+"てから再度お試しください。状況が改善しない場合は、Twitterでのフォロー数が多す"
+"ぎる可能性があります。\n"
+"\n"
+"このメッセージを閉じた後、もしもこのエラー発生時までに取得できたアカウントが"
+"あれば一覧が表示されます。"
+msgstr ""
+"An error occurred communicating with Peing. Check your Internet connection "
+"and try again later. If things don't improve, you may have too many "
+"followings on Twitter.\n"
+"\n"
+"After closing this message, you will see a list of any accounts that were "
+"able to be retrieved by the time this error occurred."
+
+#: views\main.py:336
+msgid "処理終了"
+msgstr "End of processing"
+
+#: views\main.py:336
+msgid "一括登録を試みましたが、登録の候補となるユーザが見つかりませんでした。"
+msgstr ""
+"I tried to register in bulk, but I couldn't find a potential user to "
+"register."
+
+#: views\main.py:353
+msgid ""
+"ユーザの一括登録に成功しました。今回登録したユーザの回答を表示するには、"
+"ビューを再読み込みしてください。"
+msgstr ""
+"The user was successfully registered. To view the answers of the users who "
+"registered this time, please reload the view."
+
+#: views\main.py:398 views\main.py:407 views\main.py:416
 msgid ""
 "ログインまたは質問の取得に失敗しました。以下の対処をお試しください。\n"
 "\n"
@@ -644,26 +830,26 @@ msgid ""
 "・しばらくたってから再度お試しください。\n"
 "・問題が解決しない場合、開発者までお問い合わせください。"
 msgstr ""
-"The specified user does not exist or connecion failed. Try the following:\n"
+"Failed to login or retrieving questions data. Do the following.\n"
 "\n"
-"Please check again if the input content is correct.\n"
-"Check from your browser to see if you can access peing.net.\n"
-"Please try again after a while.\n"
-"If the problem is not resolved, please contact to the developer."
+"Check if configured user information is correct.\n"
+"Check if you can connect to peing.net on your browser.\n"
+"Try again after a while.\n"
+"If this issue does not resolved, contact to developers."
 
-#: views\main.py:371
+#: views\main.py:472
 msgid "準備中"
 msgstr "Preparing"
 
-#: views\main.py:371
+#: views\main.py:472
 msgid "回答データを取得しています"
 msgstr "Retrieving answer data"
 
-#: views\main.py:391
+#: views\main.py:492
 msgid "登録ユーザの更新除外について"
 msgstr "About update exclusions for registered users"
 
-#: views\main.py:391
+#: views\main.py:492
 #, python-format
 msgid ""
 "登録していた以下のユーザは、アカウント名が変更されたか、削除されました。その"
@@ -682,8 +868,7 @@ msgstr ""
 "\n"
 "Applicable user: %s"
 
-#: views\main.py:416
-#, fuzzy
+#: views\main.py:517
 msgid ""
 "ログインに失敗しました。以下の対処をお試しください。\n"
 "\n"
@@ -693,31 +878,31 @@ msgid ""
 "・しばらくたってから再度お試しください。\n"
 "・問題が解決しない場合、開発者までお問い合わせください。"
 msgstr ""
-"The specified user does not exist or connecion failed. Try the following:\n"
+"Failed to login. Do the following.\n"
 "\n"
-"Please check again if the input content is correct.\n"
-"Check from your browser to see if you can access peing.net.\n"
-"Please try again after a while.\n"
-"If the problem is not resolved, please contact to the developer."
+"Check if configured user information is correct.\n"
+"Check if you can connect to peing.net on your browser.\n"
+"Try again after a while.\n"
+"If this issue does not resolved, contact to developers."
 
-#: views\main.py:419
+#: views\main.py:520
 msgid "質問を投稿"
 msgstr "Post a &question"
 
-#: views\main.py:419
+#: views\main.py:520
 #, python-format
 msgid "%sさんへの質問内容"
 msgstr "question to %s"
 
-#: views\main.py:431
+#: views\main.py:532
 msgid "投稿完了"
 msgstr "Post completed"
 
-#: views\main.py:431
+#: views\main.py:532
 msgid "質問を投稿しました。"
 msgstr "Your question successfully posted."
 
-#: views\main.py:448
+#: views\main.py:549
 msgid ""
 "指定されたユーザが存在しないか、通信に失敗しました。以下の対処をお試しくださ"
 "い。\n"
@@ -734,7 +919,16 @@ msgstr ""
 "Please try again after a while.\n"
 "If the problem is not resolved, please contact to the developer."
 
-#: views\main.py:450
+#: views\main.py:551
+msgid ""
+"Twitterとの通信でエラーが発生しました。指定したユーザ名が間違っているか、イン"
+"ターネット接続に問題が発生した可能性があります。"
+msgstr ""
+"An error occurred communicating with Twitter. The user name you specified "
+"may be incorrect or you may have experienced problems with your Internet "
+"connection."
+
+#: views\main.py:553
 #, python-format
 msgid ""
 "不明なエラー%(code)dが発生しました。大変お手数ですが、本ソフトの実行ファイル"
@@ -744,16 +938,35 @@ msgstr ""
 "attaching the information generated in the directory %(log)s the execution "
 "file of this software."
 
-#: views\main.py:503
+#: views\main.py:606
 msgid ""
 "この機能を利用するには、ログインが必要です。\n"
 "[オプション]→[設定]にて、アカウント情報を設定してください。詳細は、readme.txt"
 "をご確認ください。"
 msgstr ""
+"You must be logged in to take advantage of this feature.\n"
+"Configure account from settings on the options menu. See readme.txt for "
+"further information."
 
-#: views\progress.py:28
+#: views\progress.py:35
 msgid "中止(&C)"
 msgstr "&Cancel"
+
+#: views\sentQuestionDialog.py:28
+msgid "送信した質問"
+msgstr "Sent Questions"
+
+#: views\sentQuestionDialog.py:37
+msgid "宛先"
+msgstr "to"
+
+#: views\sentQuestionDialog.py:39
+msgid "回答"
+msgstr "answer"
+
+#: views\sentQuestionDialog.py:47
+msgid "詳細を表示(&D)"
+msgstr "View &Details"
 
 #: views\settingsDialog.py:42
 msgid "標準"
@@ -785,15 +998,15 @@ msgstr "Get the latest information at startup"
 
 #: views\settingsDialog.py:75
 msgid "パスワード(&P)"
-msgstr ""
+msgstr "&Password"
 
 #: views\settingsDialog.py:76
 msgid "ログインした状態で質問する"
-msgstr ""
+msgstr "Ask questions while logged in"
 
 #: views\settingsDialog.py:79
 msgid "ログ記録レベル(&L)"
-msgstr ""
+msgstr "&Logging Level"
 
 #: views\settingsDialog.py:83
 msgid "表示/言語"
@@ -833,12 +1046,12 @@ msgstr "Port number"
 
 #: views\settingsDialog.py:123
 msgid "IDとPWは両方を入力するか、両方を空欄としてください。"
-msgstr ""
+msgstr "Enter both ID and PW, or leave both blank."
 
 #: views\settingsDialog.py:127
 msgid ""
 "ログインした状態で質問をする場合には、IDとパスワードを入力してください。"
-msgstr ""
+msgstr "To ask questions while loged in, enter your ID and password."
 
 #: views\updateDialog.py:23
 #, python-format
@@ -876,14 +1089,6 @@ msgid ""
 "updater.exeが見つかりませんでした。誤って削除したかなどをご確認ください。"
 msgstr "Updater.exe could not be found."
 
-#: views\userDetailDialog.py:28 views\userListDialog.py:35
-msgid "表示名"
-msgstr "Display name"
-
-#: views\userDetailDialog.py:30 views\userListDialog.py:36
-msgid "アカウント"
-msgstr "Account"
-
 #: views\userDetailDialog.py:35
 msgid "回答状況"
 msgstr "answer status"
@@ -904,17 +1109,9 @@ msgstr "Registered Users List"
 msgid "登録済みユーザ"
 msgstr "Registered users"
 
-#: views\userListDialog.py:45
-msgid "詳細"
-msgstr "Details"
-
 #: views\userListDialog.py:47
 msgid "フィルタ(&F)"
 msgstr "&Filter"
-
-#: views\userListDialog.py:49
-msgid "削除"
-msgstr "delete"
 
 #: views\versionDialog.py:21
 msgid "バージョン情報"
@@ -948,6 +1145,9 @@ msgstr "See the included license.txt for licensing / copyright information."
 #: views\versionDialog.py:49
 msgid "閉じる"
 msgstr "close"
+
+#~ msgid "キャンセル(&C)"
+#~ msgstr "cancel"
 
 #~ msgid "中止"
 #~ msgstr "abort"
