--- a/public/history.txt
+++ b/public/history.txt
@@ -5,7 +5,8 @@ windows Native Peing Connector(NPC) 更新履歴
 2. Twitterアカウントのフォロー一覧を基に一括でNPCに登録する機能を追加しました。
 3. 自分が送信した質問の一覧表示機能を追加しました。
 4. ログイン状態で質問する機能を追加しました。
-5. 特定の質問を受信した際にエラーが発生する不具合を修正しました。
+5.登録済みユーザ一覧のリストビューにおいてDelキーが利用できるようになりました。
+6. 特定の質問を受信した際にエラーが発生する不具合を修正しました。
 
 2021/03/31 Version 1.0.2
 1. 登録済みユーザ一覧からフィルタを設定した場合に、メニューバーの状態と齟齬が発生する場合があった不具合を修正しました。
