--- a/public/history.txt
+++ b/public/history.txt
@@ -5,6 +5,7 @@ windows Native Peing Connector(NPC) 更新履歴
 1. ビューの更新処理中、処理券数が画面に表示されるようになりました。
 1. [Twitterのフォローリストから一括登録]において、件数が多い場合に登録候補ダイアログを閉じた後フリーズしてしまう場合があったため対策しました。
 1. ユーザ追加のダイアログにおいて、Twitterのユーザ名の先頭に@を付けて入力しても認識するように修正しました。
+1. [最新の情報に更新]の実行中、ESCキーでもキャンセルできるようになりました。
 
 2021/04/29 Version 1.1.0
 1. 受信した質問への回答機能を追加しました。
