--- a/public/history.txt
+++ b/public/history.txt
@@ -1,6 +1,7 @@
 windows Native Peing Connector(NPC) 更新履歴
 
 20XX/XX/XX Version 1.2.0
+1. アカウントの名前とプロフィールをNPCから変更できる機能を追加しました。
 1. フィルタの適用状況を次回起動時に引き継ぐ設定を追加しました。
 1. ビューの更新処理中、処理券数が画面に表示されるようになりました。
 1. [Twitterのフォローリストから一括登録]において、件数が多い場合に登録候補ダイアログを閉じた後フリーズしてしまう場合があったため対策しました。
