resolved #27 ユーザ一覧ダイアログにおける絞り込み表示

--- a/public/history.txt
+++ b/public/history.txt
@@ -7,6 +7,7 @@ windows Native Peing Connector(NPC) 更新履歴
 1. ビューの更新処理中、処理券数が画面に表示されるようになりました。
 1. [Twitterのフォローリストから一括登録]において、件数が多い場合に登録候補ダイアログを閉じた後フリーズしてしまう場合があったため対策しました。
 1. ユーザ追加のダイアログにおいて、Twitterのユーザ名の先頭に@を付けて入力しても認識するように修正しました。
+1. [登録済みユーザ一覧]のダイアログに、絞り込み検索機能を追加しました。
 1. [最新の情報に更新]の実行中、ESCキーでもキャンセルできるようになりました。
 1. リスト表示設定に、ヘッダを非表示にする機能を追加しました。音声読上げでの利用時、読み上げ内容を減らすことができます。
 
