--- a/public/history.txt
+++ b/public/history.txt
@@ -8,6 +8,7 @@ windows Native Peing Connector(NPC) 更新履歴
 1. [Twitterのフォローリストから一括登録]において、件数が多い場合に登録候補ダイアログを閉じた後フリーズしてしまう場合があったため対策しました。また、進行状況の表示、進行中のキャンセルに対応しました。
 1. [ユーザの追加]ダイアログにおいて、Twitterのユーザ名の先頭に@を付けて入力しても認識するように修正しました。
 1. [登録済みユーザ一覧]のダイアログに、絞り込み検索機能を追加しました。
+1. [登録済みユーザ一覧]のダイアログにおいて、カラムの並び替え状態が保存されるようになりました。キーボード操作の場合は、リストビュー上でコンテキストメニューから並び替えの操作を行うことができます。
 1. [最新の情報に更新]の実行中、ESCキーでもキャンセルできるようになりました。
 1. リスト表示設定に、ヘッダを非表示にする機能を追加しました。音声読上げでの利用時、読み上げ内容を減らすことができます。
 1. 各種ダイアログをAlt+F4のショートカットで閉じられるようにしました。
