更新履歴加筆

--- a/public/history.txt
+++ b/public/history.txt
@@ -1,8 +1,9 @@
 windows Native Peing Connector(NPC) 更新履歴
 
-20XX/XX/XX Version 1.2.0
+2021/07/XX Version 1.2.0
 1. 質問・回答のキーワード検索機能を追加しました。
 1. アカウントの名前とプロフィールをNPCから変更できる機能を追加しました。
+1. TwitterのIDを用いてログインできるようになりました。
 1. 一部のフィルタの適用状況を次回起動時に引き継ぐ設定を追加しました。
 1. ビューの更新処理中、処理券数が画面に表示されるようになりました。
 1. [Twitterのフォローリストから一括登録]において、件数が多い場合に登録候補ダイアログを閉じた後フリーズしてしまう場合があったため対策しました。また、進行状況の表示、進行中のキャンセルに対応しました。
@@ -12,6 +13,7 @@ windows Native Peing Connector(NPC) 更新履歴
 1. [最新の情報に更新]の実行中、ESCキーでもキャンセルできるようになりました。
 1. リスト表示設定に、ヘッダを非表示にする機能を追加しました。音声読上げでの利用時、読み上げ内容を減らすことができます。
 1. 各種ダイアログをAlt+F4のショートカットで閉じられるようにしました。
+1. NPCに登録していないアカウントに質問したことがある場合に、送信した質問の一覧を取得できない不具合を修正しました。
 
 2021/04/29 Version 1.1.0
 1. 受信した質問への回答機能を追加しました。
