運営からの自動質問の受信の設定機能を追加

--- a/public/history.txt
+++ b/public/history.txt
@@ -2,7 +2,7 @@ windows Native Peing Connector(NPC) 更新履歴
 
 2021/07/XX Version 1.2.0
 1. 質問・回答のキーワード検索機能を追加しました。
-1. アカウントの名前とプロフィールをNPCから変更できる機能を追加しました。
+1. アカウントの名前・プロフィール・運営からの自動質問の受信のON/OFFをNPCから変更できる機能を追加しました。
 1. TwitterのIDを用いてログインできるようになりました。
 1. 一部のフィルタの適用状況を次回起動時に引き継ぐ設定を追加しました。
 1. ビューの更新処理中、処理券数が画面に表示されるようになりました。
