--- a/public/history.txt
+++ b/public/history.txt
@@ -5,6 +5,7 @@ windows Native Peing Connector(NPC) 更新履歴
 1. アカウントの名前・プロフィール・運営からの自動質問の受信のON/OFFをNPCから変更できる機能を追加しました。
 1. TwitterのIDを用いてログインできるようになりました。
 1. 一部のフィルタの適用状況を次回起動時に引き継ぐ設定を追加しました。
+1. 適用中のフィルタをまとめて解除する機能を追加しました。
 1. ビューの更新処理中、処理券数が画面に表示されるようになりました。
 1. [Twitterのフォローリストから一括登録]において、件数が多い場合に登録候補ダイアログを閉じた後フリーズしてしまう場合があったため対策しました。また、進行状況の表示、進行中のキャンセルに対応しました。
 1. [ユーザの追加]ダイアログにおいて、Twitterのユーザ名の先頭に@を付けて入力しても認識するように修正しました。
