--- a/public/history.txt
+++ b/public/history.txt
@@ -1,7 +1,8 @@
 windows Native Peing Connector(NPC) 更新履歴
 
-2022/XX/XX Version 1.3.1
+2022/02/02 Version 1.3.1
 1. 回答者がPeingIDを変更したことをNPCが検知した後で変更後のPeingIdをNPCに登録しようとした場合に、既に登録されているというエラーが表示されていた不具合を修正しました。
+2. [Twitterのフォローリストから一括登録]が正しく動作しなくなった問題を修正しました。
 
 2021/12/18 Version 1.3.0
 1. カーソルのあった質問の位置を次回起動時に引き継ぐ機能を追加しました。
