--- a/public/history.txt
+++ b/public/history.txt
@@ -1,5 +1,8 @@
 windows Native Peing Connector(NPC) 更新履歴
 
+2022/02/02 Version 1.3.2
+1. リスト上の項目を選択していない状態でソフトウェアを終了しようとした場合、エラーとなってしまう不具合を修正しました。
+
 2022/02/02 Version 1.3.1
 1. 回答者がPeingIDを変更したことをNPCが検知した後で変更後のPeingIdをNPCに登録しようとした場合に、既に登録されているというエラーが表示されていた不具合を修正しました。
 2. [Twitterのフォローリストから一括登録]が正しく動作しなくなった問題を修正しました。
