--- a/public/history.txt
+++ b/public/history.txt
@@ -1,5 +1,8 @@
 windows Native Peing Connector(NPC) 更新履歴
 
+2023/XX/XX Version 1.X.X
+1. オプション設定に、複数行の質問・回答を入力可能にするかどうかの設定を追加しました。
+
 2022/02/02 Version 1.3.2
 1. リスト上の項目を選択していない状態でソフトウェアを終了しようとした場合、エラーとなってしまう不具合を修正しました。
 
