--- a/public/history.txt
+++ b/public/history.txt
@@ -1,5 +1,9 @@
 windows Native Peing Connector(NPC) 更新履歴
 
+2025/08/16 Version 1.4.1
+1. Peingに接続できない状況で「送信した質問を表示」を実行すると不正終了する問題の修正しました。
+2. Peingのサービス終了を見据えた記述をreadme.txtに追加しました。
+
 2023/04/29 Version 1.4.0
 1. メインウィンドウにステータスバーを追加しました。表示中の質問の数と、現在のカーソル位置が表示されます。
 2. オプション設定に、複数行の質問・回答を入力可能にするかどうかの設定を追加しました。
